[tool.poetry]
name = "neoscore"
version = "0.1.0"
description = ""
authors = ["Andrew Yoon <andrew@nothing-to-say.org>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.6"
img2pdf = "0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-xdist = "^2.5"
Sphinx="^4.5"
sphinx-rtd-theme = "1.0.0"
sphinx-autodoc-typehints = "1.17.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

